# computable.js

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  old.json  package-lock.json  package.json  setup.py  tsbuild.json  tsconfig.json
.github/: CODEOWNERS
datacoin/: create_local_chain.py
datacoin/contracts/: SafeMath.sol  TestableCrowdsale.sol  TestableToken.sol  Wallet.sol
datacoin/tests/: conftest.py  test_crowdsale.py  test_edgeless.py  test_erc20.py  test_greeter.py  test_wallet.py
datamined/: __init__.py
datamined/coins/: __init__.py  wallets.py
datamined/compute/: nodes.py
datamined/data/: clients.py
datamined/datacoin/: project.json
datamined/valid/: __init__.py
examples/: Demonstrating a DataMined Economy.ipynb  compute_workflow.py  conftest.py  data_workflow.py  deploy_local.py  economy.py  mining_example.py  simple_economy.py  test_edgeless.py  test_greeter.py  test_wallet.py  wallets.py  workflow.py
old-py/: setup.cfg
old-py/datamined/: __init__.py
old-py/datamined/coins/: __init__.py  wallets.py
old-py/datamined/compute/: __init__.py  nodes.py
old-py/datamined/data/: __init__.py  clients.py
old-py/datamined/datacoin/contracts/: DataMined.sol  TestableNow.sol  Wallet.sol
old-py/datamined/tests/: test_economy.py
old-py/datamined/valid/: validators.py
old-py/examples/: Demonstrating a DataMined Economy.ipynb  compute_workflow.py  create_local_chain.py  mining_example.py  test_edgeless.py
scripts/: install_datamined_conda.sh
spec/: base.spec.ts  compiler.ts  sign.spec.ts
spec/helpers/: index.ts  (+5 more)
src/: index.ts
(+92 files in other folders)
